--- a/index.html
+++ b/index.html
@@ -2949,7 +2949,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
           </ul>
         </li>
         
-        <li><a href="offre_cdd_marketing.html" class="nav-link">Emplois</a></li>
+        <li><a href="offre_cdd_marketing.html" class="nav-link">Réalisations</a></li>
         <li>
           <a href="devis.html" class="nav-devis">
             Demandez un devis
@@ -4686,10 +4686,109 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <h2> Nos Réalisations</h2>
         <p>Découvrez quelques projets concrets réalisés par notre AGENCE DE MARKETING DIGITAL DAKAR pour nos clients, avec un design pensé pour l'utilisateur final.</p>
       </div>
-    <div class="realisations-grid" style="display: grid; grid-template-columns: repeat(auto-fit, minmax(320px, 1fr)); gap: 2.5rem;">
-      <!-- Projet 1 -->
+    <div class="realisations-grid" style="display: grid; grid-template-columns: repeat(auto-fit, minmax(350px, 1fr)); gap: 2.5rem;">
+      
+      <!-- Projet 1: Elite Science -->
+      <div class="realisation-card" style="background: #fff; border-radius: 24px; box-shadow: 0 4px 24px rgba(31,164,122,0.08); overflow: hidden; display: flex; flex-direction: column; transition: transform 0.3s, box-shadow 0.3s;">
+        <div class="realisation-img" style="height: 240px; overflow: hidden; position: relative;">
+          <img src="https://images.unsplash.com/photo-1503676260728-1c00da094a0b?ixlib=rb-4.0.3&auto=format&fit=crop&w=800&q=80" alt="Elite Science - Plateforme éducative" style="width: 100%; height: 100%; object-fit: cover;">
+          <div style="position: absolute; top: 15px; right: 15px; background: var(--vert); color: white; padding: 0.5rem 1rem; border-radius: 20px; font-size: 0.85rem; font-weight: 600;">WordPress</div>
+        </div>
+        <div class="realisation-info" style="padding: 2rem; flex: 1; display: flex; flex-direction: column;">
+          <h3 style="color: var(--vert); margin-bottom: 0.8rem; font-size: 1.4rem;">Elite Science</h3>
+          <p style="color: var(--gris-texte); margin-bottom: 1rem; line-height: 1.6;">Plateforme éducative spécialisée avec système LMS complet, gestion de contenu pédagogique par niveau, optimisation de documents PDF et système d'abonnement premium.</p>
+          <div style="display: flex; flex-wrap: wrap; gap: 0.5rem; margin-bottom: 1.2rem;">
+            <span style="background: #e8f5f1; color: var(--vert); padding: 0.4rem 0.8rem; border-radius: 12px; font-size: 0.8rem; font-weight: 500;">WordPress</span>
+            <span style="background: #e8f5f1; color: var(--vert); padding: 0.4rem 0.8rem; border-radius: 12px; font-size: 0.8rem; font-weight: 500;">LearnDash LMS</span>
+            <span style="background: #e8f5f1; color: var(--vert); padding: 0.4rem 0.8rem; border-radius: 12px; font-size: 0.8rem; font-weight: 500;">WooCommerce</span>
+            <span style="background: #e8f5f1; color: var(--vert); padding: 0.4rem 0.8rem; border-radius: 12px; font-size: 0.8rem; font-weight: 500;">Elementor</span>
+          </div>
+          <a href="https://elite-science.com/" target="_blank" class="btn btn-secondary" style="margin-top: auto;"><i class="fas fa-external-link-alt"></i> Visiter le site</a>
+        </div>
+      </div>
+
+      <!-- Projet 2: Khidma Service Digital -->
+      <div class="realisation-card" style="background: #fff; border-radius: 24px; box-shadow: 0 4px 24px rgba(37,99,235,0.08); overflow: hidden; display: flex; flex-direction: column; transition: transform 0.3s, box-shadow 0.3s;">
+        <div class="realisation-img" style="height: 240px; overflow: hidden; position: relative;">
+          <img src="https://images.unsplash.com/photo-1460925895917-afdab827c52f?ixlib=rb-4.0.3&auto=format&fit=crop&w=800&q=80" alt="Khidma Service Digital - Agence de communication" style="width: 100%; height: 100%; object-fit: cover;">
+          <div style="position: absolute; top: 15px; right: 15px; background: var(--bleu); color: white; padding: 0.5rem 1rem; border-radius: 20px; font-size: 0.85rem; font-weight: 600;">WordPress</div>
+        </div>
+        <div class="realisation-info" style="padding: 2rem; flex: 1; display: flex; flex-direction: column;">
+          <h3 style="color: var(--bleu); margin-bottom: 0.8rem; font-size: 1.4rem;">Khidma Service Digital</h3>
+          <p style="color: var(--gris-texte); margin-bottom: 1rem; line-height: 1.6;">Site web professionnel pour agence de communication avec galerie portfolio interactive, système de devis multi-étapes, optimisation SEO locale et performances exceptionnelles (PageSpeed 92).</p>
+          <div style="display: flex; flex-wrap: wrap; gap: 0.5rem; margin-bottom: 1.2rem;">
+            <span style="background: #e8f1ff; color: var(--bleu); padding: 0.4rem 0.8rem; border-radius: 12px; font-size: 0.8rem; font-weight: 500;">WordPress</span>
+            <span style="background: #e8f1ff; color: var(--bleu); padding: 0.4rem 0.8rem; border-radius: 12px; font-size: 0.8rem; font-weight: 500;">Elementor Pro</span>
+            <span style="background: #e8f1ff; color: var(--bleu); padding: 0.4rem 0.8rem; border-radius: 12px; font-size: 0.8rem; font-weight: 500;">Yoast SEO</span>
+            <span style="background: #e8f1ff; color: var(--bleu); padding: 0.4rem 0.8rem; border-radius: 12px; font-size: 0.8rem; font-weight: 500;">AJAX</span>
+          </div>
+          <a href="https://khidmaservices.com/" target="_blank" class="btn btn-secondary" style="margin-top: auto;"><i class="fas fa-external-link-alt"></i> Visiter le site</a>
+        </div>
+      </div>
+
+      <!-- Projet 3: Saveur Deco Events - Réseaux Sociaux -->
+      <div class="realisation-card" style="background: #fff; border-radius: 24px; box-shadow: 0 4px 24px rgba(31,164,122,0.08); overflow: hidden; display: flex; flex-direction: column; transition: transform 0.3s, box-shadow 0.3s;">
+        <div class="realisation-img" style="height: 240px; overflow: hidden; position: relative;">
+          <img src="https://images.unsplash.com/photo-1611162617474-5b21e879e113?ixlib=rb-4.0.3&auto=format&fit=crop&w=800&q=80" alt="Saveur Deco Events - Gestion réseaux sociaux" style="width: 100%; height: 100%; object-fit: cover;">
+          <div style="position: absolute; top: 15px; right: 15px; background: #E1306C; color: white; padding: 0.5rem 1rem; border-radius: 20px; font-size: 0.85rem; font-weight: 600;">Social Media</div>
+        </div>
+        <div class="realisation-info" style="padding: 2rem; flex: 1; display: flex; flex-direction: column;">
+          <h3 style="color: var(--vert); margin-bottom: 0.8rem; font-size: 1.4rem;">Saveur Deco Events</h3>
+          <p style="color: var(--gris-texte); margin-bottom: 1rem; line-height: 1.6;">Gestion complète des réseaux sociaux pour une entreprise d'événementiel : création de contenu visuel, stratégie d'engagement et animation de communauté sur Facebook, Instagram et TikTok.</p>
+          <div style="display: flex; flex-wrap: wrap; gap: 0.5rem; margin-bottom: 1.2rem;">
+            <span style="background: #e8f5f1; color: var(--vert); padding: 0.4rem 0.8rem; border-radius: 12px; font-size: 0.8rem; font-weight: 500;">Facebook</span>
+            <span style="background: #e8f5f1; color: var(--vert); padding: 0.4rem 0.8rem; border-radius: 12px; font-size: 0.8rem; font-weight: 500;">Instagram</span>
+            <span style="background: #e8f5f1; color: var(--vert); padding: 0.4rem 0.8rem; border-radius: 12px; font-size: 0.8rem; font-weight: 500;">TikTok</span>
+            <span style="background: #e8f5f1; color: var(--vert); padding: 0.4rem 0.8rem; border-radius: 12px; font-size: 0.8rem; font-weight: 500;">Content Creation</span>
+          </div>
+          <div style="display: flex; gap: 0.8rem; margin-top: auto;">
+            <a href="https://www.facebook.com/saveur.deco.events" target="_blank" class="btn btn-secondary" style="flex: 1; font-size: 0.9rem;"><i class="fab fa-facebook"></i> Facebook</a>
+            <a href="https://www.instagram.com/saveur_deco_events/" target="_blank" class="btn btn-secondary" style="flex: 1; font-size: 0.9rem;"><i class="fab fa-instagram"></i> Instagram</a>
+          </div>
+        </div>
+      </div>
+
+      <!-- Projet 4: DigiDocs - GED -->
+      <div class="realisation-card" style="background: #fff; border-radius: 24px; box-shadow: 0 4px 24px rgba(37,99,235,0.08); overflow: hidden; display: flex; flex-direction: column; transition: transform 0.3s, box-shadow 0.3s;">
+        <div class="realisation-img" style="height: 240px; overflow: hidden; position: relative;">
+          <img src="https://images.unsplash.com/photo-1568667256549-094345857637?ixlib=rb-4.0.3&auto=format&fit=crop&w=800&q=80" alt="DigiDocs - Gestion Électronique des Documents" style="width: 100%; height: 100%; object-fit: cover;">
+          <div style="position: absolute; top: 15px; right: 15px; background: #8e44ad; color: white; padding: 0.5rem 1rem; border-radius: 20px; font-size: 0.85rem; font-weight: 600;">Application Web</div>
+        </div>
+        <div class="realisation-info" style="padding: 2rem; flex: 1; display: flex; flex-direction: column;">
+          <h3 style="color: var(--bleu); margin-bottom: 0.8rem; font-size: 1.4rem;">DigiDocs - GED</h3>
+          <p style="color: var(--gris-texte); margin-bottom: 1rem; line-height: 1.6;">Application de Gestion Électronique des Documents avec système d'archivage intelligent, upload/téléchargement sécurisé, recherche avancée et gestion des droits d'accès par utilisateur.</p>
+          <div style="display: flex; flex-wrap: wrap; gap: 0.5rem; margin-bottom: 1.2rem;">
+            <span style="background: #e8f1ff; color: var(--bleu); padding: 0.4rem 0.8rem; border-radius: 12px; font-size: 0.8rem; font-weight: 500;">React</span>
+            <span style="background: #e8f1ff; color: var(--bleu); padding: 0.4rem 0.8rem; border-radius: 12px; font-size: 0.8rem; font-weight: 500;">Node.js</span>
+            <span style="background: #e8f1ff; color: var(--bleu); padding: 0.4rem 0.8rem; border-radius: 12px; font-size: 0.8rem; font-weight: 500;">PostgreSQL</span>
+            <span style="background: #e8f1ff; color: var(--bleu); padding: 0.4rem 0.8rem; border-radius: 12px; font-size: 0.8rem; font-weight: 500;">TypeScript</span>
+          </div>
+          <a href="https://drive.google.com/file/d/1M-8Odn7kmtZVjTJflwe2v2sp2xtqrltS/view?usp=drive_link" target="_blank" class="btn btn-secondary" style="margin-top: auto;"><i class="fas fa-play-circle"></i> Voir la démo vidéo</a>
+        </div>
+      </div>
+
+      <!-- Projet 5: Plateforme Santé - Gestion Files d'Attente -->
+      <div class="realisation-card" style="background: #fff; border-radius: 24px; box-shadow: 0 4px 24px rgba(31,164,122,0.08); overflow: hidden; display: flex; flex-direction: column; transition: transform 0.3s, box-shadow 0.3s;">
+        <div class="realisation-img" style="height: 240px; overflow: hidden; position: relative;">
+          <img src="https://images.unsplash.com/photo-1576091160399-112ba8d25d1d?ixlib=rb-4.0.3&auto=format&fit=crop&w=800&q=80" alt="Plateforme de gestion patients et files d'attente" style="width: 100%; height: 100%; object-fit: cover;">
+          <div style="position: absolute; top: 15px; right: 15px; background: var(--vert); color: white; padding: 0.5rem 1rem; border-radius: 20px; font-size: 0.85rem; font-weight: 600;">HealthTech</div>
+        </div>
+        <div class="realisation-info" style="padding: 2rem; flex: 1; display: flex; flex-direction: column;">
+          <h3 style="color: var(--vert); margin-bottom: 0.8rem; font-size: 1.4rem;">Plateforme Santé Numérique</h3>
+          <p style="color: var(--gris-texte); margin-bottom: 1rem; line-height: 1.6;">Solution complète de gestion numérique des patients et files d'attente pour centres de santé : enregistrement digital, gestion intelligente des priorités, dossier patient numérique et affichage temps réel.</p>
+          <div style="display: flex; flex-wrap: wrap; gap: 0.5rem; margin-bottom: 1.2rem;">
+            <span style="background: #e8f5f1; color: var(--vert); padding: 0.4rem 0.8rem; border-radius: 12px; font-size: 0.8rem; font-weight: 500;">React</span>
+            <span style="background: #e8f5f1; color: var(--vert); padding: 0.4rem 0.8rem; border-radius: 12px; font-size: 0.8rem; font-weight: 500;">TypeScript</span>
+            <span style="background: #e8f5f1; color: var(--vert); padding: 0.4rem 0.8rem; border-radius: 12px; font-size: 0.8rem; font-weight: 500;">Node.js</span>
+            <span style="background: #e8f5f1; color: var(--vert); padding: 0.4rem 0.8rem; border-radius: 12px; font-size: 0.8rem; font-weight: 500;">PostgreSQL</span>
+          </div>
+          <a href="https://drive.google.com/file/d/1lIGqCk9_iYf_j0V55tsaMUhBXWBdmY3M/view" target="_blank" class="btn btn-secondary" style="margin-top: auto;"><i class="fas fa-play-circle"></i> Voir la démo vidéo</a>
+        </div>
+      </div>
+
+      <!-- Projet 6: Refonte Medical Distribution -->
       <div class="realisation-card" style="background: #fff; border-radius: 24px; box-shadow: 0 4px 24px rgba(31,164,122,0.08); overflow: hidden; display: flex; flex-direction: column;">
-        <div class="realisation-img" style="height: 200px; overflow: hidden;">
+        <div class="realisation-img" style="height: 240px; overflow: hidden;">
           <img src="ref.jpg" alt="Collaboration équipe médicale sénégalaise" style="width: 100%; height: 100%; object-fit: cover;">
         </div>
         <div class="realisation-info" style="padding: 2rem; flex: 1; display: flex; flex-direction: column; justify-content: space-between;">
@@ -4698,9 +4797,10 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
           <a href="medical-distribution.html" class="btn btn-secondary" style="margin-top: 1.2rem;"><i class="fas fa-eye"></i> Voir le projet</a>
         </div>
       </div>
-      <!-- Projet 2 -->
+
+      <!-- Projet 7: Marketing Digital Medical Distribution -->
       <div class="realisation-card" style="background: #fff; border-radius: 24px; box-shadow: 0 4px 24px rgba(31,164,122,0.08); overflow: hidden; display: flex; flex-direction: column;">
-        <div class="realisation-img" style="height: 200px; overflow: hidden;">
+        <div class="realisation-img" style="height: 240px; overflow: hidden;">
           <img src="MDD/MUCOSITE.png" alt="Collaboration marketing digital équipe sénégalaise" style="width: 100%; height: 100%; object-fit: cover;">
         </div>
         <div class="realisation-info" style="padding: 2rem; flex: 1; display: flex; flex-direction: column; justify-content: space-between;">
@@ -4709,9 +4809,10 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
           <a href="mdd.html" class="btn btn-secondary" style="margin-top: 1.2rem;"><i class="fas fa-eye"></i> Voir le contenu</a>
         </div>
       </div>
-      <!-- Projet 3 -->
+
+      <!-- Projet 8: Marketing Digital MonTransfert -->
       <div class="realisation-card" style="background: #fff; border-radius: 24px; box-shadow: 0 4px 24px rgba(37,99,235,0.08); overflow: hidden; display: flex; flex-direction: column;">
-        <div class="realisation-img" style="height: 200px; overflow: hidden;">
+        <div class="realisation-img" style="height: 240px; overflow: hidden;">
           <img src="pro-mo.png" alt="Témoignage client Porokhane">
         </div>
         <div class="realisation-info" style="padding: 2rem; flex: 1; display: flex; flex-direction: column; justify-content: space-between;">
@@ -4720,9 +4821,10 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
           <a href="mo.html" class="btn btn-secondary" style="margin-top: 1.2rem;"><i class="fas fa-eye"></i> Voir le contenu</a>
         </div>
       </div>
-      <!-- Projet 4 -->
+
+      <!-- Projet 9: Site Web Saveur Deco -->
       <div class="realisation-card" style="background: #fff; border-radius: 24px; box-shadow: 0 4px 24px rgba(31,164,122,0.08); overflow: hidden; display: flex; flex-direction: column;">
-        <div class="realisation-img" style="height: 200px; overflow: hidden;">
+        <div class="realisation-img" style="height: 240px; overflow: hidden;">
           <img src="saveurdeco.png" alt="Site web Saveur Deco">
         </div>
         <div class="realisation-info" style="padding: 2rem; flex: 1; display: flex; flex-direction: column; justify-content: space-between;">
@@ -4731,6 +4833,12 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
           <a href="https://saveurdeco.fr/" target="_blank" class="btn btn-secondary" style="margin-top: 1.2rem;"><i class="fas fa-external-link-alt"></i> Voir le site</a>
         </div>
       </div>
+
+    </div>
+    <div style="text-align: center; margin-top: 3rem;">
+      <a href="realisations.html" class="btn btn-primary" style="padding: 1rem 2.5rem; font-size: 1.1rem;">
+        <i class="fas fa-folder-open"></i> Voir toutes les réalisations
+      </a>
     </div>
   </div>
 </section>
@@ -4929,6 +5037,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
           <ul>
             <li><a href="#accueil"><i class="fas fa-chevron-right"></i> Accueil</a></li>
             <li><a href="service.html"><i class="fas fa-chevron-right"></i> Services</a></li>
+            <li><a href="realisations.html"><i class="fas fa-chevron-right"></i> Réalisations</a></li>
             <li><a href="contact.html"><i class="fas fa-chevron-right"></i> Contact</a></li>
             <li><a href="blog.html"><i class="fas fa-chevron-right"></i> Actualités</a></li>
             <li><a href="devis.html"><i class="fas fa-chevron-right"></i> Devis</a></li>
