--- a/transformation_digitale.html
+++ b/transformation_digitale.html
@@ -232,7 +232,7 @@
             <li><a href="ia.html" class="submenu-link">Intelligence Artificielle</a></li>
           </ul>
         </li>
-        <li><a href="offre_cdd_marketing.html" class="nav-link">Emplois</a></li>
+        <li><a href="offre_cdd_marketing.html" class="nav-link">Réalisations</a></li>
         <li>
           <a href="devis.html" class="nav-devis">
             Demandez un devis
