--- a/visible_seo.html
+++ b/visible_seo.html
@@ -444,8 +444,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
           </ul>
         </li>
         
-        <li><a href="offre_cdd_marketing.html" class="nav-link">Emplois</a></li>
-        <!--<li><a href="emplois" class="nav-link">Emplois</a></li>-->
+        <li><a href="offre_cdd_marketing.html" class="nav-link">Réalisations</a></li>
+        <!--<li><a href="Réalisations" class="nav-link">Réalisations</a></li>-->
         <li>
           <a href="devis.html" class="nav-devis">
             Demandez un devis
