--- a/offre_cdd_marketing.html
+++ b/offre_cdd_marketing.html
@@ -26,7 +26,7 @@
   <meta property="og:title" content="Offre d'emploi – Responsable Marketing et Communication Digitale | Porokhane Digital Consulting">
   <meta property="og:description" content="Porokhane Digital Consulting recrute un Responsable Marketing et Communication Digitale en CDD 6 mois. Candidatez maintenant !">
   <meta property="og:image" content="https://digital-porokhane.com/logo.png">
-  <meta property="og:url" content="https://digital-porokhane.com/Réalisations.html">
+  <meta property="og:url" content="https://digital-porokhane.com/realisations.html">
   <meta property="og:type" content="website">
   
   <!-- Twitter Cards -->
@@ -35,7 +35,7 @@
   <meta name="twitter:description" content="Porokhane Digital Consulting recrute un Responsable Marketing et Communication Digitale en CDD 6 mois. Candidatez maintenant !">
   <meta name="twitter:image" content="https://digital-porokhane.com/logo.png">
   
-  <link rel="canonical" href="https://digital-porokhane.com/Réalisations.html">
+  <link rel="canonical" href="https://digital-porokhane.com/realisations.html">
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700;800&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
   <meta name="google-site-verification" content="IT3v7q_2vo0wuXA7SIe4jXER1ot-GCSMRiGwoS65Yg8" />
@@ -1068,7 +1068,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
           </ul>
         </li>
         
-        <li><a href="Réalisations.html" class="nav-link" style="color: var(--vert); font-weight: 700;">Réalisations</a></li>
+        <li><a href="realisations.html" class="nav-link" style="color: var(--vert); font-weight: 700;">Réalisations</a></li>
         <li>
           <a href="devis.html" class="nav-devis">
             Demandez un devis
