--- a/robotique.html
+++ b/robotique.html
@@ -445,7 +445,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             <li><a href="ia.html" class="submenu-link">Intelligence Artificielle</a></li>
           </ul>
         </li>
-        <li><a href="Réalisations.html" class="nav-link">Réalisations</a></li>
+        <li><a href="realisations.html" class="nav-link">Réalisations</a></li>
         <li>
           <a href="devis.html" class="nav-devis">
             Demandez un devis
