--- a/blog.html
+++ b/blog.html
@@ -747,7 +747,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
           </ul>
         </li>
         
-        <li><a href="Réalisations.html" class="nav-link">Emplois</a></li>
+        <li><a href="realisations.html" class="nav-link">Emplois</a></li>
         <li>
           <a href="devis.html" class="nav-devis">
             Demandez un devis
