--- a/devis.html
+++ b/devis.html
@@ -1911,7 +1911,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
           </ul>
         </li>
         
-        <li><a href="Réalisations.html" class="nav-link">Réalisations</a></li>
+        <li><a href="realisations.html" class="nav-link">Réalisations</a></li>
         <li>
           <a href="#devis" class="nav-devis">
             Demandez un devis
