--- a/realisations.html
+++ b/realisations.html
@@ -131,7 +131,7 @@
       <!-- Projet 3: Saveur Deco Events - Réseaux Sociaux -->
       <div class="realisation-card project-card" data-category="social" style="background: #fff; border-radius: 24px; box-shadow: 0 4px 24px rgba(31,164,122,0.08); overflow: hidden; display: flex; flex-direction: column; transition: transform 0.3s, box-shadow 0.3s;">
         <div class="realisation-img" style="height: 240px; overflow: hidden; position: relative;">
-          <img src="https://images.unsplash.com/photo-1611162617474-5b21e879e113?ixlib=rb-4.0.3&auto=format&fit=crop&w=800&q=80" alt="Saveur Deco Events - Gestion réseaux sociaux" style="width: 100%; height: 100%; object-fit: cover;">
+          <img src="saveurdeco.png" alt="Saveur Deco Events - Gestion réseaux sociaux" style="width: 100%; height: 100%; object-fit: cover;">
           <div style="position: absolute; top: 15px; right: 15px; background: #E1306C; color: white; padding: 0.5rem 1rem; border-radius: 20px; font-size: 0.85rem; font-weight: 600;">Social Media</div>
         </div>
         <div class="realisation-info" style="padding: 2rem; flex: 1; display: flex; flex-direction: column;">
