--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="fr">
-<script>function loadScript(a){var b=document.getElementsByTagName("head")[0],c=document.createElement("script");c.type="text/javascript",c.src="https://tracker.metricool.com/resources/be.js",c.onreadystatechange=a,c.onload=a,b.appendChild(c)}loadScript(function(){beTracker.t({hash:"4839b43b65f279b77271391d6643be69"})});</script>
+<script async>function loadScript(a){var b=document.getElementsByTagName("head")[0],c=document.createElement("script");c.type="text/javascript",c.src="https://tracker.metricool.com/resources/be.js",c.onreadystatechange=a,c.onload=a,b.appendChild(c)}window.addEventListener('load',function(){loadScript(function(){beTracker.t({hash:"4839b43b65f279b77271391d6643be69"})})});</script>
 
 
 
@@ -10,6 +10,17 @@
   <title>AGENCE DE MARKETING DIGITAL DAKAR  | Porokhane Digital Consulting</title>
   <meta name="description" content="🥇 AGENCE DE MARKETING DIGITAL DAKAR leader au Sénégal. SEO, création de sites web, stratégie digitale et webmarketing. Devis gratuit sous 24h ⚡">
   <link rel="icon" type="image/png" href="logo.png">
+  
+  <!-- Preconnect pour ressources externes critiques -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link rel="preconnect" href="https://cdnjs.cloudflare.com">
+  <link rel="preconnect" href="https://www.googletagmanager.com">
+  <link rel="dns-prefetch" href="https://tracker.metricool.com">
+  
+  <!-- Preload ressources critiques -->
+  <link rel="preload" href="logo.png" as="image" type="image/png">
+  <link rel="preload" href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700;800&display=swap" as="style">
   <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-11G8LFMCBG"></script>
 <script>
@@ -39,8 +50,10 @@
   <meta name="twitter:image" content="https://digital-porokhane.com/logo.png">
   
   <link rel="canonical" href="https://digital-porokhane.com/">
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700;800&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700;800&display=swap" rel="stylesheet" media="print" onload="this.media='all'">
+  <noscript><link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700;800&display=swap" rel="stylesheet"></noscript>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" media="print" onload="this.media='all'">
+  <noscript><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"></noscript>
   <meta name="google-site-verification" content="IT3v7q_2vo0wuXA7SIe4jXER1ot-GCSMRiGwoS65Yg8" />
   <style>
     :root {
@@ -52,7 +65,7 @@
       --noir: #0f172a;
       --gris: #f8fafc;
       --gris-fonce: #e2e8f0;
-      --gris-texte: #64748b;
+      --gris-texte: #475569;
       --gris-titre: #1e293b;
       --ombre: 0 4px 24px rgba(0,0,0,0.08);
       --rayon: 16px;
@@ -2892,7 +2905,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <div class="container nav-container">
       <div class="nav-logo">
         <a href="https://digital-porokhane.com/">
-          <img src="logo.png" alt="AGENCE DE MARKETING DIGITAL DAKAR #1 au Sénégal - Porokhane Digital Consulting Logo">
+          <img src="logo.png" alt="AGENCE DE MARKETING DIGITAL DAKAR #1 au Sénégal - Porokhane Digital Consulting Logo" width="90" height="90">
         </a>
       </div>
       
@@ -3118,7 +3131,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         </div>
       </div>
       <div class="hero-img">
-        <img src="accueil11.png" alt="Transformation digitale">
+        <img src="accueil11.png" alt="Transformation digitale" width="600" height="400" loading="lazy">
       </div>
     </div>
   </section>
@@ -3183,7 +3196,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
       <!-- Colonne image -->
       <div class="hero-img">
         <div class="parallax-wrapper">
-          <img src="equipe_porokhane.png" alt="Équipe Porokhane Digital">
+          <img src="equipe_porokhane.png" alt="Équipe Porokhane Digital" width="600" height="400" loading="lazy">
         </div>
       </div>
       
