--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
   <link rel="dns-prefetch" href="https://tracker.metricool.com">
   
   <!-- Preload ressources critiques -->
+  <link rel="preload" href="accueil11.png" as="image" type="image/png" fetchpriority="high">
   <link rel="preload" href="logo.png" as="image" type="image/png">
   <link rel="preload" href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700;800&display=swap" as="style">
   <!-- Google tag (gtag.js) -->
@@ -3118,6 +3119,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     </div>
   </section> -->
 
+  <!-- Contenu principal -->
+  <main role="main">
   <!-- Hero -->
   <section id="accueil" class="hero">
     <div class="container hero-container">
@@ -3131,7 +3134,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         </div>
       </div>
       <div class="hero-img">
-        <img src="accueil11.png" alt="Transformation digitale" width="600" height="400" loading="lazy">
+        <img src="accueil11.png" alt="Transformation digitale" width="600" height="400" fetchpriority="high">
       </div>
     </div>
   </section>
@@ -4540,7 +4543,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
         <!-- Marketing Digital -->
         <div class="service-card">
-          <img src="seo.png" alt="Marketing Digital">
+          <img src="seo.png" alt="Marketing Digital" width="400" height="300" loading="lazy">
           <h3>Marketing Digital</h3>
           <p>Audit Express, Stratégie digitale, SEO et Réseaux sociaux.</p>
           <a href="marketing.html" class="btn btn-secondary"><i class="fas fa-arrow-right"></i> Détails...</a>
@@ -4548,7 +4551,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
          <!-- Service supplémentaire 1 -->
         <div class="service-card">
-          <img src="https://images.unsplash.com/photo-1467232004584-a241de8bcf5d?ixlib=rb-1.2.1&auto=format&fit=crop&w=400&q=80" alt="Développement Web">
+          <img src="https://images.unsplash.com/photo-1467232004584-a241de8bcf5d?ixlib=rb-1.2.1&auto=format&fit=crop&w=400&q=80" alt="Développement Web" width="400" height="300" loading="lazy">
           <h3>Développement Web et mobile</h3>
           <p>Création de sites vitrines et e-commerce sur mesure pour votre activité.</p>
           <a href="site.html" class="btn btn-secondary"><i class="fas fa-arrow-right"></i> Détails...</a>
@@ -4556,7 +4559,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
         <!-- Accompagnement -->
         <div class="service-card">
-          <img src="acc.png" alt="Accompagnement">
+          <img src="acc.png" alt="Accompagnement" width="400" height="300" loading="lazy">
           <h3>Accompagnement pour les PME</h3>
           <p>Automatisation, Bases de données et Intelligence Artificielle pour votre entreprise.</p>
           <a href="accompagnement.html" class="btn btn-secondary"><i class="fas fa-arrow-right"></i> Détails...</a>
@@ -4564,7 +4567,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
         <!-- ERP -->
         <div class="service-card">
-          <img src="erp.jpg" alt="ERP">
+          <img src="erp.jpg" alt="ERP" width="400" height="300" loading="lazy">
           <h3>ERP (Gestion d'entreprise)</h3>
           <p>Mise en place de solutions ERP sur-mesure pour piloter efficacement vos processus métiers : gestion commerciale, stock, RH, finance, etc.</p>
           <a href="erp.html" class="btn btn-secondary"><i class="fas fa-arrow-right"></i> Détails...</a>
@@ -4572,7 +4575,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
         <!-- Formations Pédagogiques -->
         <div class="service-card">
-          <img src="formation.jpg" alt="Formations Pédagogiques">
+          <img src="formation.jpg" alt="Formations Pédagogiques" width="400" height="300" loading="lazy">
           <h3>Formations Pédagogiques</h3>
           <p>Robotique, Impression 3D et Cybersécurité. Des formations adaptées à tous les niveaux.</p>
           <a href="formations.html" class="btn btn-secondary"><i class="fas fa-arrow-right"></i> Détails...</a>
@@ -4582,7 +4585,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
   
         <!-- Service supplémentaire 3 -->
         <div class="service-card">
-          <img src="se.jpg" alt="Cybersécurité">
+          <img src="se.jpg" alt="Cybersécurité" width="400" height="300" loading="lazy">
           <h3>Sécurité IT</h3>
           <p>Protection de vos données et infrastructures numériques.</p>
           <a href="securite.html" class="btn btn-secondary"><i class="fas fa-arrow-right"></i> Détails...</a>
@@ -5010,6 +5013,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
      
     </div>
   </section> -->
+  </main>
   
   <!-- Footer -->
   <footer class="footer">
